@@ -1,5 +1,5 @@
 // -*- c++ -*-
-/* $Id$ */
+/* $Id: calendar.ccg,v 1.1 2003/01/21 13:38:43 murrayc Exp $ */
 
 /* 
  *
@@ -25,5 +25,18 @@
 namespace Gtk
 {
 
+void Calendar::get_date(Glib::Date& date) const
+{
+	guint year = 0;
+	guint month = 0;
+	guint day = 0;
+	
+	get_date(year, month, day);
+	
+	date.set_year(year);
+	date.set_month(static_cast<Glib::Date::Month>(Glib::Date::JANUARY + month)); // Month from 1 to 12 instead from 0 to 11
+	date.set_day(day);	
 }
+
+} //namespace Gtk
 
