@@ -1,4 +1,4 @@
-/* $Id$ */
+/* $Id: calendar.hg,v 1.6 2006/02/25 12:38:11 murrayc Exp $ */
 
 /* calendar.h
  * 
@@ -20,6 +20,7 @@
  */
 
 #include <gtkmm/widget.h>
+#include <glibmm/date.h>
 _DEFS(gtkmm,gtk)
 _PINCLUDE(gtkmm/private/widget_p.h)
 
@@ -66,6 +67,13 @@ public:
   _WRAP_METHOD(CalendarDisplayOptions get_display_options() const, gtk_calendar_get_display_options)
 
   _WRAP_METHOD(void get_date(guint& year, guint& month, guint& day) const, gtk_calendar_get_date)
+  // Additional method not in GTK (#350584)
+  /** Get the date as Glib::Date
+   *
+   * @param date Referenz to set the date
+   */
+  void get_date(Glib::Date& date) const;
+  
   _WRAP_METHOD(void freeze(), gtk_calendar_freeze)
   _WRAP_METHOD(void thaw(), gtk_calendar_thaw)
 
