@@ -1,3 +1,9 @@
+2007-05-01  Johannes Schmid <jhs@gnome.org>
+	
+	* gtk/src/calendar.hg
+	* gtk/src/calendar.ccg
+	Bug 350584 – Calendar::get_date() method using Glib::Date
+
 2007-05-01  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/gtk_signals.defs: Adjust the GtkStatusIcon::popup_menu signal 
